--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -114,14 +114,12 @@
     "changePasswordSuccessMessage": "Your password has been updated.",
     "tagAll": "All",
     "recipesTagBreakfast": "Breakfast",
-    "recipesTagMains": "Mains",
+    "recipesTagLunch": "Lunch",
+    "recipesTagDinner": "Dinner",
     "recipesTagSnack": "Snack",
-    "recipesTagSweet": "Sweet",
-    "recipesTagSavoury": "Savoury",
-    "recipesTagVegetarian": "Vegetarian",
-    "recipesTagVegan": "Vegan",
-    "recipesTagEggFree": "Egg-free",
-    "recipesTagFodmap": "Fodmap-friendly",
+    "recipesTagDessert": "Dessert",
+    "recipesTagCondiments": "Condiments",
+    "recipesTagDrinks": "Drinks",
     "kbTagDiet": "Diet",
     "kbTagEnergy": "Energy",
     "kbTagExercise": "Exercise",
