--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -120,6 +120,16 @@
     "recipesTagDessert": "Dessert",
     "recipesTagCondiments": "Condiments",
     "recipesTagDrinks": "Drinks",
+    "recipesTagSecondaryPlantBased": "Plant Based",
+    "recipesTagSecondaryVegetarian": "Vegetarian",
+    "recipesTagSecondaryGlutenFree": "Gluten Free",
+    "recipesTagSecondaryDairyFree": "Dairy Free",
+    "recipesTagSecondaryNutFree": "Nut Free",
+    "recipesTagSecondaryEggFree": "Egg Free",
+    "recipesTagSecondaryPescatarian": "Pescatarian",
+    "recipesTagSecondaryFodmapFriendly": "Fodmap Friendly",
+    "recipesTagSecondaryCalorieControlled": "Calorie Controlled",
+    "recipesTagSecondarySlowCooker": "Slow Cooker",
     "kbTagDiet": "Diet",
     "kbTagEnergy": "Energy",
     "kbTagExercise": "Exercise",
