added layout for lesson recipes on dashboard.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -229,5 +229,6 @@
     "noFavouriteKB": "No favourite knowledge base items to display.",
     "noFavouriteRecipe": "No favourite recipes to display.",
     "lessonWiki": "Lesson wiki",
-    "viewWiki": "View wiki"
+    "viewWiki": "View wiki",
+    "lessonRecipes": "Lesson recipes"
 }
