Added option to show long answer wikis in a popup, and linked up an addFavourites.

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -230,7 +230,7 @@
     "noFavouriteKB": "No favorite knowledge base items to display.",
     "noFavouriteRecipe": "No favorite recipes to display.",
     "lessonWiki": "Lesson Wiki",
-    "viewWiki": "View wiki",
+    "viewWiki": "View answer",
     "lessonRecipes": "Lesson recipes",
     "swipeUpForAnswer": "Swipe up for answer",
     "swipeDownForQuestion": "Swipe down for question"
