--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -230,7 +230,7 @@
     "noFavouriteKB": "No favourite knowledge base items to display.",
     "noFavouriteRecipe": "No favourite recipes to display.",
     "lessonWiki": "Lesson Wiki",
-    "viewWiki": "View wiki",
+    "viewWiki": "View answer",
     "lessonRecipes": "Lesson recipes",
     "swipeUpForAnswer": "Swipe up for answer",
     "swipeDownForQuestion": "Swipe down for question"
