Layout of full wiki page, plus new pages added to Lesson for wikis and to show recipes (recipes need adding). Also refactored knowledge base to faqs and wiki page.

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -231,7 +231,7 @@
     "noFavouriteRecipe": "No favorite recipes to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWiki": "View answer",
-    "lessonRecipes": "Lesson recipes",
+    "lessonRecipes": "Lesson Recipes",
     "swipeUpForAnswer": "Swipe up for answer",
     "swipeDownForQuestion": "Swipe down for question"
 }
