--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -231,7 +231,7 @@
     "noFavouriteRecipe": "No favourite recipes to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWiki": "View answer",
-    "lessonRecipes": "Lesson recipes",
+    "lessonRecipes": "Lesson Recipes",
     "swipeUpForAnswer": "Swipe up for answer",
     "swipeDownForQuestion": "Swipe down for question"
 }
