--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -11,6 +11,7 @@
     "messageTitle": "Message",
     "profileTitle": "Profile",
     "changePasswordTitle": "Change Password",
+    "appHelpTitle": "App Help",
     "requestDataTitle": "Request Data",
     "helpTitle": "Help",
     "supportTitle": "Support",
