Animated no wikis message.

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -232,6 +232,8 @@
     "noFavouriteRecipe": "No favorite recipes to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWiki": "View answer",
+    "noWikis": "There are no wiki items for this lesson",
+    "noRecipes": "There are no recipes for this lesson",
     "lessonRecipes": "Lesson Recipes",
     "swipeUpForAnswer": "Swipe up for answer",
     "swipeDownForQuestion": "Swipe down for question"
