Loading initial wikis and recipes on dashboard.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -233,7 +233,9 @@
     "lessonWiki": "Lesson Wiki",
     "viewWiki": "View answer",
     "noWikis": "There are no wiki items for this lesson",
+    "lockedWikis": "Open the lesson to view the lesson and wikis",
     "noRecipes": "There are no recipes for this lesson",
+    "lockedRecipes": "Open the lesson to view the lesson and recipes",
     "lessonRecipes": "Lesson Recipes",
     "swipeUpForAnswer": "Swipe up for answer",
     "swipeDownForQuestion": "Swipe down for question",
