Favourites tabs layout complete, still need to implement favourites actions for lesson wikis and recipes. Wiki now slides up on tap, not swipe, as swipe clashing with scrolling dashboard. Also removed two old providers no longer used. Added new alternative background color.

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -231,7 +231,8 @@
     "noFavouriteKB": "No favorite knowledge base items to display.",
     "noFavouriteRecipe": "No favorite recipes to display.",
     "lessonWiki": "Lesson Wiki",
-    "viewWiki": "View answer",
+    "viewWikiAnswer": "View answer",
+    "viewWikiQuestion": "View question",
     "noWikis": "There are no wiki items for this lesson",
     "lockedWikis": "Open the lesson to view the lesson and wikis",
     "noRecipes": "There are no recipes for this lesson",
