Favourites so far.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -159,8 +159,9 @@
     "lessonsTitle": "Lessons",
     "favouriteRemoveTitle": "Remove favourite",
     "favouriteRemoveText": "Are you sure you want to remove this favourite?",
-    "favouritesWatchNow": "View now",
-    "favouritesViewDetails": "View details",
+    "favouritesViewLesson": "View lesson",
+    "favouritesViewWiki": "View wiki",
+    "favouritesViewRecipe": "View recipe",
     "deleteMessageTitle": "Delete message",
     "deleteMessageText": "Are you sure you want to delete this message?",
     "tutorialTitle":"Tutorial",
@@ -228,7 +229,7 @@
     "lessonSearch": "Lesson Search",
     "futureLesson": "Future Lesson",
     "noFavouriteLesson": "No favourite lessons to display.",
-    "noFavouriteKB": "No favourite knowledge base items to display.",
+    "noFavouriteWikis": "No favourite lesson wikis to display.",
     "noFavouriteRecipe": "No favourite recipes to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWikiAnswer": "View answer",
