--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -159,8 +159,9 @@
     "lessonsTitle": "Lessons",
     "favouriteRemoveTitle": "Remove favorite",
     "favouriteRemoveText": "Are you sure you want to remove this favorite?",
-    "favouritesWatchNow": "View now",
-    "favouritesViewDetails": "View details",
+    "favouritesViewLesson": "View lesson",
+    "favouritesViewWiki": "View wiki",
+    "favouritesViewRecipe": "View recipe",
     "deleteMessageTitle": "Delete message",
     "deleteMessageText": "Are you sure you want to delete this message?",
     "tutorialTitle":"Tutorial",
@@ -228,7 +229,7 @@
     "lessonSearch": "Lesson Search",
     "futureLesson": "Future Lesson",
     "noFavouriteLesson": "No favorite lessons to display.",
-    "noFavouriteKB": "No favorite knowledge base items to display.",
+    "noFavouriteWikis": "No favorite lesson wikis to display.",
     "noFavouriteRecipe": "No favorite recipes to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWikiAnswer": "View answer",
