--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -43,7 +43,7 @@
     "pinForgottenMessage": "This will clear your credentials and PIN so you can sign in with your username/email and password. Do you want to continue?",
     "pinForgottenContinue": "Continue",
     "pinForgottenCancel": "Cancel",
-    "passwordForgottenTitle": "Forgotten Password",
+    "passwordForgottenTitle": "Forgot Password?",
     "passwordForgottenMessage": "We will send an email to your registered email address so you can reset your password. Do you want to continue?",
     "passwordForgottenEmailMessage": "Please enter your registered email address or username in the 'Email or username' box and click 'Forgotten Password' again.",
     "passwordForgottenContinue": "Yes, send email",
