--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -1,7 +1,7 @@
 {
     "@@locale": "en-US",
     "appTitle": "Ovie",
-    "companyTitle": "Ovie",
+    "companyTitle": "The PCOS Nutritionist",
     "dashboardTitle": "Your Course",
     "wikiTitle": "Wikis",
     "recipesTitle": "Recipes",
