Fix grammar-related issues in the signin errors
https://moacreative.teamwork.com/#/tasks/36336928

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -30,9 +30,9 @@
     "openWebsiteText": "To register for Ovie on your device click the 'Sign Up' button below to visit the Ovie Questionnaire website.",
     "openWebsiteWhy": "Ovie is a personalized programme, delivered according to your own goals.",
     "signinErrorTitle": "Sign In Failed",
-    "signinErrorText": "Your email/username or password are incorrect, please try again.",
-    "signInEmailNotVerifiedErrorText": "Your email address has not be verified, please check your inbox for a new verification email.",
-    "signinUnknownErrorText": "We could not sign you in, please try again later",
+    "signinErrorText": "Your email/username or password are incorrect. Please try again.",
+    "signInEmailNotVerifiedErrorText": "Your email address has not been verified. Please check your inbox for a new verification email.",
+    "signinUnknownErrorText": "We could not sign you in. Please try again later.",
     "validateEmailMessage": "Please enter your email or username",
     "validatePasswordMessage": "Please enter your password",
     "questionnaireWebsiteErrorTitle": "Could not open browser",
