include workouts in favorites page tabs

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -5,6 +5,7 @@
     "dashboardTitle": "Your Course",
     "wikiTitle": "Wikis",
     "recipesTitle": "Recipes",
+    "workoutsTitle": "Workouts",
     "favouritesTitle": "Favorites",
     "coachChatTitle": "Coach Chat",
     "messagesTitle": "Messages",
@@ -188,6 +189,7 @@
     "viewPreviousModules": "Previous modules",
     "previousModules": "Previous Modules",
     "saveText": "Save",
+    "loadingLessons": "Just a moment whilst we load your personalized Ovie plan!",
     "noResultsLessons": "No lessons to display!",
     "noResultsLessonsSearch": "No lessons matching your search.",
     "viewNow": "View lesson",
@@ -231,6 +233,7 @@
     "noFavouriteLesson": "No favorite lessons to display.",
     "noFavouriteWikis": "No favorite lesson wikis to display.",
     "noFavouriteRecipe": "No favorite recipes to display.",
+    "noFavouriteWorkout": "No favorite workouts to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWikiAnswer": "View answer",
     "viewWikiQuestion": "View question",
