--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,6 +5,7 @@
     "dashboardTitle": "Your Course",
     "wikiTitle": "Wikis",
     "recipesTitle": "Recipes",
+    "workoutsTitle": "Workouts",
     "favouritesTitle": "Favourites",
     "coachChatTitle": "Coach Chat",
     "messagesTitle": "Messages",
@@ -188,6 +189,7 @@
     "viewPreviousModules": "Previous modules",
     "previousModules": "Previous Modules",
     "saveText": "Save",
+    "loadingLessons": "Just a moment whilst we load your personalized Ovie plan!",
     "noResultsLessons": "No lessons to display!",
     "noResultsLessonsSearch": "No lessons matching your search.",
     "viewNow": "View lesson",
@@ -231,6 +233,7 @@
     "noFavouriteLesson": "No favourite lessons to display.",
     "noFavouriteWikis": "No favourite lesson wikis to display.",
     "noFavouriteRecipe": "No favourite recipes to display.",
+    "noFavouriteWorkout": "No favorite workouts to display.",
     "lessonWiki": "Lesson Wiki",
     "viewWikiAnswer": "View answer",
     "viewWikiQuestion": "View question",
